--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="animation1">
     <div class="linkBox">
         <ul>
-            <li><a href="./animation1.html">animation1</a></li>
+            <li><a href="./index.html">animation1</a></li>
             <li><a href="./animation2.html">animation2</a></li>
         </ul>
     </div>
