--- a/animation2.html
+++ b/animation2.html
@@ -23,10 +23,48 @@
                     <circle cx="70" cy="70" r="70"></circle>
                 </svg>
             </div>
+            <div class="number">
+                <h2>85<span>%</span></h2>
+                <p>HTML</p>
+            </div>
         </div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+            <div class="percent" style="--clr:#fceb04;--num:60;">
+                <div class="dot"></div>
+                <svg>
+                    <circle cx="70" cy="70" r="70"></circle>
+                    <circle cx="70" cy="70" r="70"></circle>
+                </svg>
+            </div>
+            <div class="number">
+                <h2>60<span>%</span></h2>
+                <p>css</p>
+            </div>
+        </div>        <div class="card">
+            <div class="percent" style="--clr:#fc5304;--num:75;">
+                <div class="dot"></div>
+                <svg>
+                    <circle cx="70" cy="70" r="70"></circle>
+                    <circle cx="70" cy="70" r="70"></circle>
+                </svg>
+            </div>
+            <div class="number">
+                <h2>75<span>%</span></h2>
+                <p>js</p>
+            </div>
+        </div>        <div class="card">
+            <div class="percent" style="--clr:#2904fc;--num:45;">
+                <div class="dot"></div>
+                <svg>
+                    <circle cx="70" cy="70" r="70"></circle>
+                    <circle cx="70" cy="70" r="70"></circle>
+                </svg>
+            </div>
+            <div class="number">
+                <h2>45<span>%</span></h2>
+                <p>vue</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
